--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ET CRYPTO </title>
+    <title>ET CRYPRTO </title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
   <body>
     <nav id="desktop-nav">
-      <div class="logo">ET CRYPTO </div>
+      <div class="logo">ET CRYPRTO </div>
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
@@ -20,7 +20,7 @@
       </div>
     </nav>
     <nav id="hamburger-nav">
-      <div class="logo">ET CRYPTO </div>
+      <div class="logo">ET CRYPRTO </div>
       <div class="hamburger-menu">
         <div class="hamburger-icon" onclick="toggleMenu()">
           <span></span>
@@ -37,14 +37,14 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="https://i.im.ge/2024/11/07/kpV2V6.6001270164349371270-modified.png" alt="ET CRYPTO  profile picture" />
+        <img src="https://i.im.ge/2025/02/03/Hq5eJ8.image-8.png" alt="ET CRYPRTO  profile picture" />
       </div>
       <div class="section__text">
-        <h1 class="title">ET CRYPTO </h1>
+        <h1 class="title">ET CRYPRTO </h1>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('https://t.me/My_crypto_airdrop')"
+            onclick="window.open('https://t.me/ETH_CRYPRTO')"
           >
            Telegram 
           </button>
@@ -55,18 +55,18 @@
     </section>
     <section id="about">
       <p class="section__text__p1">Get To Know More</p>
-      <h1 class="title">About Me</h1>
+      <h1 class="title">About We</h1>
       <div class="section-container">
         <div class="about-details-container">
           <div class="about-containers">
             <div class="details-container">
               <img
-                src="https://i.im.ge/2024/11/07/kpV2V6.6001270164349371270-modified.png"
+                src="https://i.im.ge/2025/02/03/Hq5eJ8.image-8.png"
                 alt="AirdropTasks icon"
                 class="icon"
               />
               <h3>AirdropTasks</h3>
-              <p>2+ years <br />Frontend Development</p>
+              <p>2+ years In <br />Crypto and Airdrop</p>
             </div>
             <div class="details-container">
               <img
@@ -75,17 +75,12 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>B.Sc. Bachelors Degree<br />M.Sc. Masters Degree</p>
+              <p>marketing<br />coding<br />iconomics<br /> and other </p>
             </div>
           </div>
           <div class="text-container">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-              reprehenderit et laborum, rem, dolore eum quod voluptate
-              exercitationem nobis, nihil esse debitis maxime facere minus sint
-              delectus velit in eos quo officiis explicabo deleniti dignissimos.
-              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-              reiciendis ea magnam? Nulla, impedit fuga!
+             Welcome to the official website description of the ET Crypto Website! ET Crypto is your go-to source for everything related to cryptocurrency technology, crypto news, and airdrop opportunities. We regularly share the latest updates in the crypto world, introduce new airdrops, and provide step-by-step guides on how to participate. Whether you're interested in blockchain technology, cryptocurrency trends, or free airdrop opportunities, ET Crypto has you covered. Stay tuned with us to never miss out on the latest crypto news and airdrop alerts!
             </p>
           </div>
         </div>
@@ -100,20 +95,18 @@
     </section>
     <section id="contact">
       <p class="section__text__p1">Get in Touch</p>
-      <h1 class="title">Contact Me</h1>
+      <h1 class="title">Contact We</h1>
       <div class="contact-info-upper-container">
         <div class="contact-info-container">
           <img
             src="./assets/email.png"
-            alt="Email icon"
-            class="icon contact-icon email-icon"
+            class="icon contact-icon "
           />
           <p><a href="yichalaldabulo@gmail.com">Gmail</a></p>
         </div>
         <div class="contact-info-container">
           <img
             src="./assets/linkedin.png"
-            alt="Telegram icon"
             class="icon contact-icon"
           />
           <p><a href="https://t.me/Yichu_Bro">Telegram</a></p>
@@ -121,7 +114,7 @@
       </div>
     </section>
     <footer>
-      <p>Copyright &#169; 2024 ET CRYPTO . All Rights Reserved.</p>
+      <p>Copyright &#169; 2025 ET CRYPRTO . All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
   </body>
