--- a/index.html
+++ b/index.html
@@ -29,8 +29,6 @@
         </div>
         <div class="menu-links">
           <li><a href="#about" onclick="toggleMenu()">About</a></li>
-          <li><a href="youtunecode.html" onclick="toggleMenu()">AirdropTasks</a></li>
-          <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
           <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
         </div>
       </div>
@@ -70,7 +68,7 @@
             </div>
             <div class="details-container">
               <img
-                src="./assets/education.png"
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT8IuQr5IVavs1pESUJdhTouVT2vBQGFPaCEtaP72CwII_5rlwaRiX0yync4oo78znqMOI&usqp=CAU"
                 alt="Education icon"
                 class="icon"
               />
