--- a/q.html
+++ b/q.html
@@ -4,16 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>task Center</title>
+    <title>ET CRYPRTO </title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
   <body>
     <nav id="desktop-nav">
-      <div class="logo">My Airdrop </div>
+      <div class="logo">ET CRYPRTO </div>
+      <div>
+        <ul class="nav-links">
+          <li><a href="#index.html">Home</a></li>
+        </ul>
+      </div>
     </nav>
     <nav id="hamburger-nav">
-      <div class="logo">My Airdrop </div>
+      <div class="logo">ET CRYPRTO </div>
       <div class="hamburger-menu">
         <div class="hamburger-icon" onclick="toggleMenu()">
           <span></span>
@@ -22,39 +27,36 @@
         </div>
         <div class="menu-links">
           <li><a href="#about" onclick="toggleMenu()">About</a></li>
-          <li><a href="youtunecode.html" onclick="toggleMenu()">AirdropTasks</a></li>
-          <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
           <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
         </div>
       </div>
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="https://i.im.ge/2024/11/07/kpV2V6.6001270164349371270-modified.png" alt="My Airdrop  profile picture" />
+        <img src="https://i.im.ge/2024/11/07/kpV2V6.6001270164349371270-modified.png" alt="ET CRYPRTO  profile picture" />
       </div>
       <div class="section__text">
-        <h1 class="title">My Airdrop </h1>
+        <h1 class="title">ET CRYPRTO </h1>
         <div class="btn-container">
             <button class="btn btn-color-1" 
-            onclick="location.href="https://t.me/ETH_CRYPRTO"'">
+            onclick="location.href='https://t.me/ETH_CRYPRTO' ">
             Comunity
           </button>
              <button class="btn btn-color-2" 
-            onclick="location.href='seed.html'">
-            seed
+            onclick="location.href='https://t.me/ethiopaypal2'">
+           Our Channel
           </button>
              <button class="btn btn-color-1" 
-            onclick="location.href='blum.html'">
-            blum
+            onclick="location.href='https://t.me/amharic_motivation_Quotes'">
+            አነቃቅ ንግግሮች
           </button>
              <button class="btn btn-color-2" 
-            onclick="location.href='hotwallet.html'">
-            hotwallet
+            onclick="location.href='https://t.me/Ethiosport12123'">
+             Ethio sport
           </button>
              <button class="btn btn-color-1" 
             onclick="location.href='./#contact'">
             Contact Info
-          </button>
         </div>  
   </body>
 </html>
