--- a/q.html
+++ b/q.html
@@ -33,7 +33,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="https://i.im.ge/2024/11/07/kpV2V6.6001270164349371270-modified.png" alt="ET CRYPRTO  profile picture" />
+        <img src="https://i.im.ge/2025/02/03/Hq5eJ8.image-8.png" alt="ET CRYPRTO  profile picture" />
       </div>
       <div class="section__text">
         <h1 class="title">ET CRYPRTO </h1>
