--- a/index.html
+++ b/index.html
@@ -19,17 +19,13 @@
           <span></span>
           <span></span>
         </div>
-        <div class="menu-links">
-          <li><a href="youtunecode.html" onclick="toggleMenu()">AirdropTasks</a></li>>
-        </div>
       </div>
-    </nav>
       <div class="section__text">
         <h1 class="title">ET CRYPTO </h1>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="location.href='english.html'"
+            onclick="location.href='amharic.html'"
           >
           Amharic
           </button>
