--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ET CRYPTO </title>
+    <title>ET CRYPRTO </title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
   <body>
     <nav id="desktop-nav">
-      <div class="logo">ET CRYPTO </div>
+      <div class="logo">ET CRYPRTO </div>
     </nav>
-      <div class="logo">ET CRYPTO </div>
+      <div class="logo">ET CRYPRTO </div>
       <div class="hamburger-menu">
         <div class="hamburger-icon" onclick="toggleMenu()">
           <span></span>
@@ -21,7 +21,7 @@
         </div>
       </div>
       <div class="section__text">
-        <h1 class="title">ET CRYPTO </h1>
+        <h1 class="title">ET CRYPRTO </h1>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
