--- a/anharic.html
+++ b/anharic.html
@@ -1,1 +1,121 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ET CRYPRTO </title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="mediaqueries.css" />
+  </head>
+  <body>
+    <nav id="desktop-nav">
+      <div class="logo">ET CRYPRTO </div>
+      <div>
+        <ul class="nav-links">
+          <li><a href="#about">About</a></li>
+          <li><a href="q.html">Comunity</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+    <nav id="hamburger-nav">
+      <div class="logo">ET CRYPRTO </div>
+      <div class="hamburger-menu">
+        <div class="hamburger-icon" onclick="toggleMenu()">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <div class="menu-links">
+          <li><a href="#about" onclick="toggleMenu()">About</a></li>
+          <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
+        </div>
+      </div>
+    </nav>
+    <section id="profile">
+      <div class="section__pic-container">
+        <img src="https://i.im.ge/2025/02/03/Hq5eJ8.image-8.png" alt="ET CRYPRTO  profile picture" />
+      </div>
+      <div class="section__text">
+        <h1 class="title">ET CRYPRTO </h1>
+        <div class="btn-container">
+          <button
+            class="btn btn-color-2"
+            onclick="window.open('https://t.me/ETH_CRYPRTO')"
+          >
+           Telegram 
+          </button>
+          <button class="btn btn-color-1" onclick="location.href='./#contact'">
+            Contact Info
+          </button>
+        </div>  
+    </section>
+    <section id="about">
+      <p class="section__text__p1">Get To Know More</p>
+      <h1 class="title">About We</h1>
+      <div class="section-container">
+        <div class="about-details-container">
+          <div class="about-containers">
+            <div class="details-container">
+              <img
+                src="https://i.im.ge/2025/02/03/Hq5eJ8.image-8.png"
+                alt="AirdropTasks icon"
+                class="icon"
+              />
+              <h3>AirdropTasks</h3>
+              <p>2+ years In <br />Crypto and Airdrop</p>
+            </div>
+            <div class="details-container">
+              <img
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT8IuQr5IVavs1pESUJdhTouVT2vBQGFPaCEtaP72CwII_5rlwaRiX0yync4oo78znqMOI&usqp=CAU"
+                alt="Education icon"
+                class="icon"
+              />
+              <h3>Education</h3>
+              <p>marketing<br />coding<br />iconomics<br /> and other </p>
+            </div>
+          </div>
+          <div class="text-container">
+            <p>
+             እንኳን ወደ ET Crypto Website በሰላም መጡ!በ ET Cryprto telegram channal እና website ላይ በኪራይፕቶ አለም ውስጥ የቴክኖሎጂ፣ የኪራይፕቶ ዜናዎች፣ እና አዲስ አይርድሮፕ የምንለቅ ቦታ ነው። 
+              በአሁኑ ጊዜ በኪራይፕቶ፣ በብሎክቼይን ቴክኖሎጂ፣ እና በአይርድሮፕ ላይ የተዘጋጀ ዝርዝር መረጃዎችን ታገኛላቹ።ከ ቢዝነስ ነክ ገበያ ጋር የተያያዘ መረጃ ታገኛላቹ ። 
+               COME AND JOIN!
+            </p>
+          </div>
+        </div>
+        </div>
+      </div>
+      <img
+        src="./assets/arrow.png"
+        alt="Arrow icon"
+        class="icon arrow"
+        onclick="location.href='./#contact'"
+      />
+    </section>
+    <section id="contact">
+      <p class="section__text__p1">Get in Touch</p>
+      <h1 class="title">Contact We</h1>
+      <div class="contact-info-upper-container">
+        <div class="contact-info-container">
+          <img
+            src="./assets/email.png"
+            class="icon contact-icon "
+          />
+          <p><a href="yichalaldabulo@gmail.com">Gmail</a></p>
+        </div>
+        <div class="contact-info-container">
+          <img
+            src="./assets/linkedin.png"
+            class="icon contact-icon"
+          />
+          <p><a href="https://t.me/Yichu_Bro">Telegram</a></p>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <p>Copyright &#169; 2025 ET CRYPRTO . All Rights Reserved.</p>
+    </footer>
+    <script src="script.js"></script>
+  </body>
+</html>
