--- a/index.html
+++ b/index.html
@@ -13,12 +13,7 @@
       <div class="logo">ET CRYPRTO </div>
     </nav>
       <div class="logo">ET CRYPRTO </div>
-      <div class="hamburger-menu">
-        <div class="hamburger-icon" onclick="toggleMenu()">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
+      <div>
       </div>
       <div class="section__text">
         <h1 class="title">ET CRYPRTO </h1>
