--- a/english.html
+++ b/english.html
@@ -30,6 +30,7 @@
         <div class="menu-links">
           <li><a href="#about" onclick="toggleMenu()">About</a></li>
           <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
+          <li><a href="q.html" onclick="toggleMenu()">Comunity</a></li>
         </div>
       </div>
     </nav>
