--- a/q.html
+++ b/q.html
@@ -13,7 +13,7 @@
       <div class="logo">ET CRYPRTO </div>
       <div>
         <ul class="nav-links">
-          <li><a href="#index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
         </ul>
       </div>
     </nav>
