--- a/amharic.html
+++ b/amharic.html
@@ -30,6 +30,7 @@
         <div class="menu-links">
           <li><a href="#about" onclick="toggleMenu()">About</a></li>
           <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
+          <li><a href="q.html" onclick="toggleMenu()">Comunity</a></li>
         </div>
       </div>
     </nav>
@@ -77,11 +78,12 @@
             </div>
           </div>
           <div class="text-container">
-            <p>
+           <h2> <p>
              እንኳን ወደ ET Crypto Website በሰላም መጡ!በ ET Cryprto telegram channal እና website ላይ በኪራይፕቶ አለም ውስጥ የቴክኖሎጂ፣ የኪራይፕቶ ዜናዎች፣ እና አዲስ አይርድሮፕ የምንለቅ ቦታ ነው። 
               በአሁኑ ጊዜ በኪራይፕቶ፣ በብሎክቼይን ቴክኖሎጂ፣ እና በአይርድሮፕ ላይ የተዘጋጀ ዝርዝር መረጃዎችን ታገኛላቹ።ከ ቢዝነስ ነክ ገበያ ጋር የተያያዘ መረጃ ታገኛላቹ ። 
                COME AND JOIN!
             </p>
+           </h2>
           </div>
         </div>
         </div>
