--- a/amharic.html
+++ b/amharic.html
@@ -69,7 +69,7 @@
             </div>
             <div class="details-container">
               <img
-                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT8IuQr5IVavs1pESUJdhTouVT2vBQGFPaCEtaP72CwII_5rlwaRiX0yync4oo78znqMOI&usqp=CAU"
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQnMvz2EmbmOMD5WUWVdDE5p9xZPYlVS4X2PA&s"
                 alt="Education icon"
                 class="icon"
               />
