--- a/amharic.html
+++ b/amharic.html
@@ -95,7 +95,7 @@
         onclick="location.href='./#contact'"
       />
     </section>
-    <section id="contact">
+    <section id="#contact">
       <p class="section__text__p1">Get in Touch</p>
       <h1 class="title">Contact We</h1>
       <div class="contact-info-upper-container">
