--- a/amharic.html
+++ b/amharic.html
@@ -15,7 +15,7 @@
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
           <li><a href="q.html">Comunity</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="amharic.html/#contact">Contact</a></li>
         </ul>
       </div>
     </nav>
@@ -29,7 +29,7 @@
         </div>
         <div class="menu-links">
           <li><a href="#about" onclick="toggleMenu()">About</a></li>
-          <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
+          <li><a href="#amharic.html/contact" onclick="toggleMenu()">Contact</a></li>
           <li><a href="q.html" onclick="toggleMenu()">Comunity</a></li>
         </div>
       </div>
