--- a/amharic.html
+++ b/amharic.html
@@ -47,7 +47,7 @@
           >
            Telegram 
           </button>
-          <button class="btn btn-color-1" onclick="location.href='./#contact'">
+          <button class="btn btn-color-1" onclick="location.href='amharic.html/#contact'">
             Contact Info
           </button>
         </div>  
@@ -92,7 +92,7 @@
         src="./assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
-        onclick="location.href='./#contact'"
+        onclick="location.href='amharic.html/#contact'"
       />
     </section>
     <section id="#contact">
