--- a/amharic.html
+++ b/amharic.html
@@ -29,7 +29,7 @@
         </div>
         <div class="menu-links">
           <li><a href="#about" onclick="toggleMenu()">About</a></li>
-          <li><a href="#amharic.html/contact" onclick="toggleMenu()">Contact</a></li>
+          <li><a href="amharic.html/contact" onclick="toggleMenu()">Contact</a></li>
           <li><a href="q.html" onclick="toggleMenu()">Comunity</a></li>
         </div>
       </div>
